--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,10 @@
 services:
   - type: web
-    name: ip-logger-app
+    name: cc-checker-site
     env: python
     plan: free
     buildCommand: ""
-    startCommand: "python app.py"
+    startCommand: "gunicorn app:app --bind 0.0.0.0:5000"
+    envVars:
+      - key: PORT
+        value: "5000"
